syntax = "proto3";
package golang_protobuf_brand;
option go_package="/golang_protobuf_brand";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message ProtoBrandRepo {
    message ProtoBrand {
        uint64 ID = 1;
        string Name = 2;
        uint32 Year = 3;
    }
    repeated ProtoBrand brands = 1;
}

// Schema needs to be extended with Protobuf service which results in RPC generated code.
// To Use message types with an RPC system, we need to define RPC service in this file and protobuf compiler will generate service interface code in Go.

// RPC operation can only have one request parameter according to specification
// so the workaraound is necessary
message UpdateRequest {
    google.protobuf.Int64Value ID = 1;
    ProtoBrandRepo.ProtoBrand Brand = 2;
}

service CRUD {
    rpc Create(ProtoBrandRepo.ProtoBrand) returns (ProtoBrandRepo.ProtoBrand);
    rpc GetList(google.protobuf.Empty) returns (stream ProtoBrandRepo.ProtoBrand); // stream means array ig
    rpc GetOne(google.protobuf.Int64Value) returns (ProtoBrandRepo.ProtoBrand);
    rpc Update(UpdateRequest) returns (ProtoBrandRepo.ProtoBrand);
    rpc Delete(google.protobuf.Int64Value) returns (google.protobuf.BoolValue);
}

// stream operator, is at runtime yielding items one after the other!
// alternative approach is to define response message type
//  which has repeated Brands field close to ProtoBrandRepo